fix: fixed property section tooltip gets cut off if property has longer name #2293

--- a/packages/dashboard/src/components/internalDashboard/index.css
+++ b/packages/dashboard/src/components/internalDashboard/index.css
@@ -56,6 +56,7 @@
 .collapsible-panel-content {
   min-height: 0;
   overflow-y: scroll;
+  flex-grow: 1;
 }
 
 .collapsible-panel-vertical-divider {
