--- a/packages/react-components/src/components/tooltip/tooltip.css
+++ b/packages/react-components/src/components/tooltip/tooltip.css
@@ -16,7 +16,7 @@
 
 .top {
   bottom: -30%;
-  left: 40%;
+  left: 50%;
   transform: translateX(-50%) translateY(-100%);
 }
 
